# airplane-tickets-prediction

./: .gitignore  LICENSE  README.md  docker-compose.yml
backend/: .env.example  Dockerfile  data_loader.py  main.py  minio.py  pyproject.toml
backend/src/: config.py  data_loader.py  minio.py  model_trainer.py
frontend/: Dockerfile  index.html  package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/components/: AirportDropdown.tsx
