[project]
name = "airplane-tickets-prediction"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.38.23",
    "dotenv>=0.9.9",
    "fastapi[standard]>=0.115.12",
    "ipython>=9.3.0",
    "joblib>=1.5.1",
    "kaggle>=1.7.4.5",
    "numpy>=2.2.6",
    "pandas>=2.2.3",
    "requests>=2.32.3",
    "ruff>=0.11.13",
    "scikit-learn>=1.7.0",
]
